--- a/index.html
+++ b/index.html
@@ -795,6 +795,315 @@
                             interactive: true,
                     }
                     break;
+                case 'Mikro B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(210, 22, 168, 1.0)', // cor aleatória
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'Mikro A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(30, 11, 199, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M02B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(239, 69, 47, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T06B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(74, 208, 57, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M02A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(142, 221, 241, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T05B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(15, 89, 142, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T05AB':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(255, 120, 0, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T05A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(130, 176, 249, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T06M':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(217, 38, 162, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N09B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(68, 240, 186, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N09A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(177, 19, 221, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M01B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(51, 251, 86, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M01A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(40, 103, 213, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T04B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(199, 137, 0, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'T04A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(28, 200, 200, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N08B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(185, 227, 42, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N08A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(219, 65, 65, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M03C':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(82, 24, 120, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N07B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(210, 40, 147, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M03B':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(48, 211, 210, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'N07A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(66, 233, 111, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+                case 'M03A':
+                    return {
+                        pane: 'pane_Mesclado_1',
+                        opacity: 1,
+                        color: 'rgba(145, 40, 254, 1.0)',
+                        dashArray: '',
+                        lineCap: 'square',
+                        lineJoin: 'bevel',
+                        weight: 3.0,
+                        fillOpacity: 0,
+                        interactive: true,
+                    }
+                    break;
+
+
                 case '025':
                     return {
                         pane: 'pane_Mesclado_1',
