--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/qgis2web.css">
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" href="css/filter.css">
+    <link rel="stylesheet" href="css/tabela.css">
     <link rel="stylesheet" href="css/nouislider.min.css">
     <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
     <script src="data/styles.js"></script>
@@ -19,94 +20,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js">
     </script>
-
-    <style>
-        html,
-        body,
-        #map {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-
-        #streetViewContainer {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            z-index: 1000;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        #table-container {
-            position: fixed;
-            top: 65px;
-            right: 20px;
-            /* width: 50%; */
-            /* height: 62%; */
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-            z-index: 1000;
-            overflow-y: auto;
-            max-height: 400px;
-        }
-
-        #table-container.collapsed {
-            width: 72px;
-            height: 24px;
-            padding: 5px;
-            overflow: hidden;
-            left: 90%;
-        }
-
-        #toggle-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-            z-index: 1100;
-        }
-
-        table.display {
-            width: 100%;
-            border-collapse: collapse;
-            font-family: 'Calibri', sans-serif;
-            font-size: 11px;
-        }
-
-        table.display th,
-        table.display td {
-            padding: 8px;
-            text-align: left;
-            border: 1px solid #ddd;
-        }
-
-        table.display th {
-            background-color: #f2f2f2;
-        }
-
-        .dataTables_wrapper {
-            font-family: 'Calibri', sans-serif;
-            font-size: 11px;
-        }
-
-        .dataTables_filter label,
-        .dataTables_length label,
-        .dataTables_info,
-        .dataTables_paginate {
-            font-size: 11px;
-        }
-    </style>
     <title>Consulta de setores</title>
     <link rel="shortcut icon" type="image/jpg" href="icon.ico" />
 </head>
