--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@
         bounds_group.addLayer(layer_Mesclado_1);
         map.addLayer(layer_Mesclado_1);
 
-        // Substituir o geocoder Google pelo padrão do Leaflet
+        // --- MELHORIAS DE USABILIDADE E PERFORMANCE ---
+        // 1. Remover marcador anterior ao buscar novo endereço
+        var geocodeMarker = null;
         var leafletGeocoder = L.Control.geocoder({
             defaultMarkGeocode: false,
             collapsed: false,
@@ -354,13 +356,47 @@
                 `https://www.google.com/maps/embed/v1/streetview?key=AIzaSyCiKpZmnL9TQXOJd9Qbzw2agE9kxnTGZ38&location=${latlng.lat},${latlng.lng}&heading=210&pitch=10&fov=35`
             );
             streetViewDiv.appendChild(streetViewFrame);
+            // Remover marcador anterior
+            if (geocodeMarker) {
+                map.removeLayer(geocodeMarker);
+            }
             // Adicionar marcador e popup
-            L.marker(latlng).addTo(map)
+            geocodeMarker = L.marker(latlng).addTo(map)
                 .bindPopup(`<b>${address}</b> <br><a href='https://www.google.com/maps?q=&layer=c&cbll=${latlng.lat},${latlng.lng}&cbp=11,0,0,0,0' target='_blank'>Abrir Street View</a>`)
                 .openPopup();
             map.setView(latlng, 18);
         }).addTo(map);
 
+        // 2. Feedback visual ao buscar endereço
+        var geocoderInput = document.querySelector('.leaflet-control-geocoder-form input');
+        if (geocoderInput) {
+            geocoderInput.addEventListener('keydown', function() {
+                var streetViewDiv = document.getElementById('streetViewContainer');
+                streetViewDiv.innerHTML = '<span style="color:#888">Buscando endereço...</span>';
+            });
+        }
+
+        // 3. Acessibilidade no botão de tabela
+        var toggleBtn = document.getElementById('toggle-button');
+        if (toggleBtn) {
+            toggleBtn.setAttribute('aria-pressed', 'false');
+            toggleBtn.setAttribute('aria-label', 'Minimizar ou expandir setores');
+            toggleBtn.addEventListener('click', function () {
+                var expanded = document.getElementById('table-container').style.display !== 'none';
+                this.setAttribute('aria-pressed', expanded ? 'false' : 'true');
+            });
+        }
+
+        // 4. Responsividade básica para o mapa e tabela
+        var style = document.createElement('style');
+        style.innerHTML = `
+        @media (max-width: 800px) {
+            #map, #mapWindow { height: 300px !important; }
+            #table-container { max-width: 100vw; overflow-x: auto; }
+            .col9, .col3 { width: 100% !important; display: block !important; }
+        }
+        `;
+        document.head.appendChild(style);
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
             .className += ' fa fa-search';
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
